--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 .container {
-  background: url("../assets/background.jpg") no-repeat center center;
+  background: url("assets/background.jpg") no-repeat center center;
   background-size: contain;
   height: 100vh;
   display: flex;
